fix on mobile about app position

--- a/src/components/HowUse/how-use.scss
+++ b/src/components/HowUse/how-use.scss
@@ -53,7 +53,7 @@
       }
 
       .image-featured {
-        transform: translateX(-30px);
+        transform: translateX(-50%);
         height: 500px;
         width: auto;
         max-width: none;
